--- a/Week-1/Weekly-Technical-Content-1/Conditional-Statements/ifElseWork/pom.xml
+++ b/Week-1/Weekly-Technical-Content-1/Conditional-Statements/ifElseWork/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.velihangozek</groupId>
-    <artifactId>ifElseWork</artifactId>
+    <artifactId>IfElseWork</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
