--- a/Week-12/Weekly-Technical-Content-2/JpaTrials/pom.xml
+++ b/Week-12/Weekly-Technical-Content-2/JpaTrials/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>7.0.0.Final</version>
+            <version>6.3.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
